# AgilityContest_SerialChronometer

./: AC_SerialProtocol.odt  CMakeLists.txt  INSTALL.txt  README.md  build.sh  sc_dialog.sh  serial_chrono.ahk  serial_chrono.bat  serial_chrono.ini  serial_chrono.sh
html/: clock.html  countdown.js  crono.js  index.html
include/: ajax_curl.h  ajax_json.h  ajax_mgr.h  ajax_parser.h  config.h  console_mgr.h  debug.h  license.h  main.h  main_mgr.h  modules.h  net_mgr.h  parser.h  qrcode_mgr.h  sc_config.h  sc_sockets.h  sc_tools.h  serial_mgr.h  web_mgr.h  web_server.h
libcsoap-1.1.0/examples/: http_server.c  simpleclient.c
libcsoap-1.1.0/include/nanohttp/: nanohttp-common.h
libcsoap-1.1.0/lib/osx/: libcsoap-1.1.1.1.0.dylib  libnanohttp-1.1.1.1.0.dylib
libs/logging/: debug.c  debug.h
libs/parseini/: ini.c
libserialport/include/: libserialport.h
libserialport/lib/linux/: libserialport.so.0.1.0
libserialport/lib/osx/: libserialport.0.dylib
libserialport/linux/: libserialport.so.0.1.0
libwebsockets-4.1.0/lib/linux/: libwebsockets.so.17
src/: ajax_curl.c  ajax_json.c  ajax_mgr.c  ajax_parser.c  config.c  console_mgr.c  debug.c  license.c  main.c  main_mgr.c  net_mgr.c  parser.c  qrcode_mgr.c  sc_config.c  sc_sockets.c  sc_tools.c  serial_mgr.c  web_mgr.c  web_server.c
src/modules/: canometroweb.c  digican.c  dummy.c  generic.c
wingetopt/: getopt.c
